--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,17 @@
   height: 100%;
   width: 100%;
 }
+
+::-webkit-scrollbar{
+  width: 6px;
+  background-color: white;
+}
+
+::-webkit-scrollbar-track{
+  background-color: white;
+}
+
+::-webkit-scrollbar-thumb{
+  background-color: black;
+}
+
