--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,10 @@ body{
   overflow-x: hidden;
 }
 
+section{
+  background: white;
+}
+
 #root, html, body{
   background-color: white;
   font-family: 'Neue Montreal', sans-serif;
